--- a/openidc-jessie/Dockerfile
+++ b/openidc-jessie/Dockerfile
@@ -14,3 +14,8 @@ ADD 000-default.conf /etc/apache2/sites-available/
 
 RUN a2enmod auth_openidc
 RUN service apache2 start && curl -v http://localhost/protected/index.php 2>&1 | grep "Location:" | grep "accounts.google.com/o/oauth2/auth"
+
+# Above is from pingdentity Dockerfile's content, below is not
+EXPOSE 80
+ADD httpd-foreground /usr/local/bin/
+ENTRYPOINT ["httpd-foreground"]
