--- a/test1/docker-compose.yml
+++ b/test1/docker-compose.yml
@@ -9,13 +9,13 @@ services:
       - "8080:8080"
       - "9990:9990"
     # Uncomment the following and docker-compose up keycloak again to export realms
-    #volumes:
-    #  - ./keycloak-export:/export
+    volumes:
+      - ./keycloak-export:/export
     #entrypoint:
     #  - /opt/jboss/keycloak/bin/standalone.sh
     #  - -Dkeycloak.migration.action=export
-    #  - -Dkeycloak.migration.provider=singleFile
-    #  - -Dkeycloak.migration.file=/export/openidc-keycloak-test.json
+    #  - -Dkeycloak.migration.provider=dir
+    #  - -Dkeycloak.migration.dir=/export
   openidc:
     build: ../openidc-jessie
     expose:
