Lets you log in to Keycloak

--- a/test1/docker-compose.yml
+++ b/test1/docker-compose.yml
@@ -2,6 +2,9 @@ version: '2'
 services:
   keycloak:
     build: ../keycloak-standalone
+    environment:
+      KEYCLOAK_USER: admin
+      KEYCLOAK_PASSWORD: openidctest
     expose:
       - "8080"
       - "9090"
