--- a/openidc1/docker-compose.yml
+++ b/openidc1/docker-compose.yml
@@ -1,22 +1,25 @@
 version: '2'
 services:
-  postgres:
-    image: postgres:9.5
+  mysql:
+    image: mariadb:10.0
     expose:
-      - "5432"
+      - "3306"
     environment:
-      POSTGRES_PASSWORD: keycloak
-      POSTGRES_USER: keycloak
-      # Workaround for legacy env use in container
-      # (didn't solve "WFLYCTL0211: Cannot resolve expression 'jdbc:postgresql://${env.POSTGRES_PORT_5432_TCP_ADDR}...")
-      POSTGRES_PORT_5432_TCP_ADDR: postgres
+      MYSQL_DATABASE: keycloak
+      MYSQL_USER: keycloak
+      MYSQL_PASSWORD: keycloak
+      MYSQL_ROOT_PASSWORD: root
   keycloak:
-    image: jboss/keycloak-postgres:1.9.2.Final
-    depends_on:
-      - postgres
+    image: jboss/keycloak-mysql:1.9.2.Final
+    links:
+      - mysql
     environment:
       KEYCLOAK_USER: admin
       KEYCLOAK_PASSWORD: openidctest
+      # Workaround for legacy env use in container
+      # (didn't solve "WFLYCTL0211: Cannot resolve expression 'jdbc:mysql://${env.POSTGRES_PORT_5432_TCP_ADDR}...")n
+      MYSQL_PORT_3306_TCP_PORT: 3306
+      MYSQL_PORT_3306_TCP_ADDR: mysql
     expose:
       - "8080"
       - "9090"
@@ -41,8 +44,11 @@ services:
       - "80:80"
     depends_on:
       - keycloak
+    # Don't allow direct communication with keycloak; depends on hosting scenario
+    #links:
+    #  - keycloak
   testclient:
     build: ./client-node-request
-    depends_on:
+    links:
       - openidc
       - keycloak
