--- a/openidc1/docker-compose.yml
+++ b/openidc1/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     expose:
       - "5432"
     environment:
-      POSTGRES_PASSWORD: keycloak
       POSTGRES_USER: keycloak
+      POSTGRES_PASSWORD: keycloak
   keycloak:
     image: jboss/keycloak-postgres:1.9.2.Final
     links:
@@ -14,6 +14,8 @@ services:
     environment:
       KEYCLOAK_USER: admin
       KEYCLOAK_PASSWORD: openidctest
+      POSTGRES_USER: keycloak
+      POSTGRES_PASSWORD: keycloak
       # Workaround for container using legacy Docker links, resulting in
       # "WFLYCTL0211: Cannot resolve expression 'jdbc:postgresql://${env.POSTGRES_PORT_5432_TCP_ADDR}...")n
       POSTGRES_PORT_5432_TCP_ADDR: postgres
