--- a/openidc-jessie/000-default.conf
+++ b/openidc-jessie/000-default.conf
@@ -2,15 +2,19 @@
 	ServerAdmin webmaster@localhost
 	DocumentRoot /var/www/html
 
-	ErrorLog ${APACHE_LOG_DIR}/error.log
-	CustomLog ${APACHE_LOG_DIR}/access.log combined
+	ErrorLog /proc/self/fd/1
+	CustomLog /proc/self/fd/2 combined
 
-	OIDCProviderIssuer accounts.google.com
-	OIDCProviderAuthorizationEndpoint https://accounts.google.com/o/oauth2/auth
-	OIDCRedirectURI http://localhost/protected/redirect_uri
-	OIDCCryptoPassphrase abcd54321
-	OIDCClientID client_id
-	OIDCClientSecret client_secret
+	OIDCProviderMetadataURL http://keycloak:8080/auth/realms/master/.well-known/openid-configuration
+	#OIDCRedirectURI http://openidc/oauth2callback
+	OIDCRedirectURI http://openidc/protected/redirect_uri
+	OIDCCryptoPassphrase 0123456789
+	OIDCClientID testclient
+	OIDCClientSecret 2ee789d3-e39e-48c7-96fe-33b0f985d55f
+
+	#OIDCRemoteUserClaim email
+	#OIDCScope "openid email"
+	OIDCPassClaimsAs environment
 
 	<Location /protected>
 		AuthType openid-connect
