Now visit http://openidc/protected and login as test1:test1. I think current export will be able to create the realm.

--- a/openidc1/docker-compose.yml
+++ b/openidc1/docker-compose.yml
@@ -29,11 +29,11 @@ services:
     # Uncomment the following and docker-compose up keycloak again to export realms
     volumes:
       - ./keycloak-setup/export:/export
-    entrypoint:
-      - /opt/jboss/keycloak/bin/standalone.sh
-      - -Dkeycloak.migration.action=export
-      - -Dkeycloak.migration.provider=dir
-      - -Dkeycloak.migration.dir=/export
+    #entrypoint:
+    #  - /opt/jboss/keycloak/bin/standalone.sh
+    #  - -Dkeycloak.migration.action=export
+    #  - -Dkeycloak.migration.provider=dir
+    #  - -Dkeycloak.migration.dir=/export
   openidc:
     build: ../openidc-jessie
     expose:
