The self check in the test container fails now when it's no longer google auth

--- a/openidc-jessie/Dockerfile
+++ b/openidc-jessie/Dockerfile
@@ -13,7 +13,7 @@ RUN apt-get install -y -f
 ADD 000-default.conf /etc/apache2/sites-available/
 
 RUN a2enmod auth_openidc
-RUN service apache2 start && curl -v http://localhost/protected/index.php 2>&1 | grep "Location:" | grep "accounts.google.com/o/oauth2/auth"
+#RUN service apache2 start && curl -v http://localhost/protected/index.php 2>&1 | grep "Location:" | grep "accounts.google.com/o/oauth2/auth"
 
 # Above is from pingdentity Dockerfile's content, below is not
 EXPOSE 80
