--- a/openidc1/docker-compose.yml
+++ b/openidc1/docker-compose.yml
@@ -46,6 +46,8 @@ services:
     # Don't allow direct communication with keycloak; depends on hosting scenario
     #links:
     #  - keycloak
+    volumes:
+      - ./html-ajax:/var/www/html
   testclient:
     build: ./client-node-request
     links:
