Gets email as username, in logs for example, instead of ids like 7ddd9d62-05b6-417c-9ed5-186bc168c7c4@http://keycloak:8080/auth/realms/Testrealm

--- a/openidc-jessie/000-default.conf
+++ b/openidc-jessie/000-default.conf
@@ -12,8 +12,8 @@
 	OIDCClientID testclient
 	OIDCClientSecret 99f47cdf-089c-469b-a205-8e521cbcd6b7
 
-	#OIDCRemoteUserClaim email
-	#OIDCScope "openid email"
+	OIDCRemoteUserClaim email
+	OIDCScope "openid email"
 	OIDCPassClaimsAs environment
 
 	<Location /protected>
