Starts an investigation into how to be authenticated in protected microservices

--- a/openidc-jessie/000-default.conf
+++ b/openidc-jessie/000-default.conf
@@ -21,4 +21,16 @@
 		Require valid-user
 	</Location>
 
+	<Location /protected/proxied-jwt>
+		# Maybe OIDCPassClaimsAs headers (or "both") can do the same
+		RequestHeader set Authorization "Bearer %{OIDC_access_token}e"
+	</Location>
+	ProxyPass /protected/proxied-jwt http://httpd-jwtauth
+
+	<Location /protected/proxied-env>
+	  # email here because it matches OIDCRemoteUserClaim
+		RequestHeader set X-Forwarded-User %{OIDC_CLAIM_EMAIL}e
+	</Location>
+	ProxyPass /protected/proxied-env http://httpd-envauth
+
 </VirtualHost>
