--- a/openidc-jessie/000-default.conf
+++ b/openidc-jessie/000-default.conf
@@ -25,12 +25,12 @@
 		# Maybe OIDCPassClaimsAs headers (or "both") can do the same
 		RequestHeader set Authorization "Bearer %{OIDC_access_token}e"
 	</Location>
-	ProxyPass /protected/proxied-jwt http://httpd-jwtauth
+	ProxyPass /protected/proxied-jwt http://proxied-jwt
 
 	<Location /protected/proxied-env>
-	  # email here because it matches OIDCRemoteUserClaim
+		# Email here because it matches OIDCRemoteUserClaim
 		RequestHeader set X-Forwarded-User %{OIDC_CLAIM_EMAIL}e
 	</Location>
-	ProxyPass /protected/proxied-env http://httpd-envauth
+	ProxyPass /protected/proxied-env http://proxied-env
 
 </VirtualHost>
