--- a/openidc-jessie/000-default.conf
+++ b/openidc-jessie/000-default.conf
@@ -14,6 +14,9 @@
 
 	OIDCSessionType server-cache:persistent
 
+	OIDCCacheType redis
+	OIDCRedisCacheServer redis1
+
 	OIDCRemoteUserClaim email
 	OIDCScope "openid email"
 	OIDCPassClaimsAs environment
