Apparently there's SSO even when redis state isn't shared

--- a/openidc1/docker-compose.yml
+++ b/openidc1/docker-compose.yml
@@ -55,14 +55,16 @@ services:
       - ./html-ajax:/var/www/html
   # Can be used to test that auth state is shared between containers,
   # but login on http://openidc:2080/ will redirect to the wrong instance unless we tweak the conf file
+  redis2:
+    image: redis
+    expose:
+      - "6379"
   openidc2:
     build: ../openidc-jessie
     ports:
       - "2080:80"
     links:
-      - redis1:redis
-    depends_on:
-      - keycloak
+      - redis2:redis
     volumes:
       - ./html-ajax:/var/www/html
   keycloak-setup:
