Always get a chance to respond 401, as cached pages can be very confusing during auth tests

--- a/openidc-jessie/000-default.conf
+++ b/openidc-jessie/000-default.conf
@@ -16,6 +16,8 @@
 	OIDCScope "openid email"
 	OIDCPassClaimsAs environment
 
+	Header setifempty Cache-Control "max-age=0, must-revalidate"
+
 	<Location /protected>
 		AuthType openid-connect
 		Require valid-user
