Fixes compatibility with Keycloak's 'Remember Me' checkbox

--- a/openidc-jessie/000-default.conf
+++ b/openidc-jessie/000-default.conf
@@ -12,6 +12,8 @@
 	OIDCClientID testclient
 	OIDCClientSecret 99f47cdf-089c-469b-a205-8e521cbcd6b7
 
+	OIDCSessionType server-cache:persistent
+
 	OIDCRemoteUserClaim email
 	OIDCScope "openid email"
 	OIDCPassClaimsAs environment
