The redirect back to keycloak after logout was according to spec

--- a/openidc-jessie/000-default.conf
+++ b/openidc-jessie/000-default.conf
@@ -29,7 +29,11 @@
 	# This is non-trivial so we keep all the stages of encoding as documentation
 	#RedirectTemp /logout http://keycloak:8080/auth/realms/Testrealm/protocol/openid-connect/logout?redirect_uri=http://openidc/protected/redirect_uri?logout=            http://openidc/?we-have-no-loggedout-page-yet
 	#RedirectTemp /logout http://keycloak:8080/auth/realms/Testrealm/protocol/openid-connect/logout?redirect_uri=http%3A%2F%2Fopenidc%2Fprotected%2Fredirect_uri%3Flogout=http%3A%2F%2Fopenidc%2F%3Fwe-have-no-loggedout-page-yet
-	RedirectTemp  /logout http://keycloak:8080/auth/realms/Testrealm/protocol/openid-connect/logout?redirect_uri=http%3A%2F%2Fopenidc%2Fprotected%2Fredirect_uri%3Flogout=http%253A%252F%252Fopenidc%252F%253Fwe-have-no-loggedout-page-yet
+	#RedirectTemp  /logout http://keycloak:8080/auth/realms/Testrealm/protocol/openid-connect/logout?redirect_uri=http%3A%2F%2Fopenidc%2Fprotected%2Fredirect_uri%3Flogout=http%253A%252F%252Fopenidc%252F%253Fwe-have-no-loggedout-page-yet
+	# Actually because OIDCProviderMetadataURL declares an end_session_endpoint it should be the other way around
+	#RedirectTemp /logout http://openidc/protected/redirect_uri?logout=http://openidc/?we-have-no-loggedout-page-yet
+	RedirectTemp /logout http://openidc/protected/redirect_uri?logout=http%3A%2F%2Fopenidc%2F%3Fwe-have-no-loggedout-page-yet
+	# TODO test if redirect should be changed to strip anything after /logout
 
 	<Location /protected>
 		AuthType openid-connect
