--- a/openidc-jessie/000-default.conf
+++ b/openidc-jessie/000-default.conf
@@ -18,6 +18,9 @@
 	OIDCScope "openid email"
 	OIDCPassClaimsAs environment
 
+	# There's also one in the OIDCProviderMetadataURL response
+	#OIDCOAuthIntrospectionEndpoint https://openidc/as/token.oauth2
+
 	Header setifempty Cache-Control "max-age=0, must-revalidate"
 
 	RedirectTemp /logout http://openidc/protected/redirect_uri?logout=http%3A%2F%2Fopenidc%2F%3Fwe-have-no-loggedout-page-yet
