--- a/httpd-openidc/Dockerfile
+++ b/httpd-openidc/Dockerfile
@@ -1,5 +1,6 @@
 
-FROM httpd:2.4.23
+# https://github.com/docker-library/repo-info/blob/master/repos/httpd/tag-details.md
+FROM httpd@sha256:aa0711c4fc25264ce59b5f9315b555ba1252ad0fbd0e290634b693df2045a072
 
 ENV CJOSE_VERSION 0.4.1
 ENV CJOSE_DEB_URL https://mod-auth-openidc.org/download/libcjose_${CJOSE_VERSION}-1_amd64.deb
