The shasum for the .deb from https://github.com/pingidentity/mod_auth_openidc/releases

--- a/build-contracts/docker-compose.yml
+++ b/build-contracts/docker-compose.yml
@@ -35,7 +35,7 @@ services:
     #  - -Dkeycloak.migration.provider=dir
     #  - -Dkeycloak.migration.dir=/export
   openidc:
-    build: ../openidc-jessie
+    build: ../httpd-openidc
     expose:
       - "80"
     # For local browser; you also need "openidc" in your hosts file
