Uses official image's htdocs location

--- a/build-contracts/openidc/000-default.conf
+++ b/build-contracts/openidc/000-default.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
 	ServerAdmin webmaster@localhost
-	DocumentRoot /var/www/html
+	DocumentRoot htdocs/
 
 	ErrorLog /proc/self/fd/1
 	CustomLog /proc/self/fd/2 combined
