--- a/openidc-jessie/000-default.conf
+++ b/openidc-jessie/000-default.conf
@@ -5,6 +5,8 @@
 	ErrorLog /proc/self/fd/1
 	CustomLog /proc/self/fd/2 combined
 
+	LogLevel debug
+
 	OIDCProviderMetadataURL http://keycloak:8080/auth/realms/Testrealm/.well-known/openid-configuration
 	#OIDCRedirectURI http://openidc/oauth2callback
 	OIDCRedirectURI http://openidc/protected/redirect_uri
