Until we have a firm decision on endpoint auth this comment represents our reservation

--- a/build-contracts/openidc/000-default.conf
+++ b/build-contracts/openidc/000-default.conf
@@ -11,6 +11,7 @@
 	OIDCCryptoPassphrase 0123456789
 	OIDCClientID testclient
 	OIDCClientSecret 99f47cdf-089c-469b-a205-8e521cbcd6b7
+	# See https://github.com/Reposoft/openidc-keycloak-test/issues/7
 	OIDCProviderTokenEndpointAuth client_secret_basic
 
 	OIDCSessionType server-cache:persistent
