--- a/build-contracts/docker-compose.yml
+++ b/build-contracts/docker-compose.yml
@@ -14,9 +14,7 @@ services:
     #  - --character-set-server=utf8mb4
     #  - --collation-server=utf8mb4_unicode_ci
   keycloak:
-    build:
-      context: ../keycloak-ha-mysql
-    image: solsson/keycloak-ha-mysql
+    image: jboss/keycloak-mysql:2.3.0.Final
     links:
       - mysql
     environment:
@@ -40,21 +38,6 @@ services:
     #  - -Dkeycloak.migration.action=export
     #  - -Dkeycloak.migration.provider=dir
     #  - -Dkeycloak.migration.dir=/export
-  keycloak2:
-    build:
-      context: ../keycloak-ha-mysql
-    links:
-      - mysql
-    environment:
-      KEYCLOAK_USER: admin
-      KEYCLOAK_PASSWORD: openidctest
-      MYSQL_DATABASE: keycloak
-      MYSQL_USER: keycloak
-      MYSQL_PASSWORD: keycloak
-      MYSQL_PORT_3306_TCP_ADDR: mysql
-      MYSQL_PORT_3306_TCP_PORT: "3306"
-    expose:
-      - "8080"
   keycloak-ha:
     build: ./ha
     links:
