Adds the second keycloak instance. Produces invalid redirects.

--- a/build-contracts/ha/proxy.conf
+++ b/build-contracts/ha/proxy.conf
@@ -11,7 +11,7 @@
 
 <Proxy "balancer://keycloak">
     BalancerMember "http://keycloak:8080"
-    #BalancerMember "http://keycloak2:8080"
+    BalancerMember "http://keycloak2:8080"
     ProxySet lbmethod=byrequests
 </Proxy>
 ProxyPass "/" "balancer://keycloak/"
