--- a/build-contracts/docker-compose.yml
+++ b/build-contracts/docker-compose.yml
@@ -40,6 +40,22 @@ services:
     #  - -Dkeycloak.migration.action=export
     #  - -Dkeycloak.migration.provider=dir
     #  - -Dkeycloak.migration.dir=/export
+  keycloak2:
+    build:
+      context: ../keycloak-ha-mysql
+    image: solsson/keycloak-ha-mysql
+    links:
+      - mysql
+    environment:
+      KEYCLOAK_USER: admin
+      KEYCLOAK_PASSWORD: openidctest
+      MYSQL_DATABASE: keycloak
+      MYSQL_USER: keycloak
+      MYSQL_PASSWORD: keycloak
+      MYSQL_PORT_3306_TCP_ADDR: mysql
+      MYSQL_PORT_3306_TCP_PORT: "3306"
+    expose:
+      - "8080"
   keycloak-ha:
     build: ./ha
     links:
