--- a/keycloak-ha-mysql/Dockerfile
+++ b/keycloak-ha-mysql/Dockerfile
@@ -1,3 +1,5 @@
 FROM jboss/keycloak-mysql:2.3.0.Final
 
 CMD ["-b", "0.0.0.0", "--server-config", "standalone-ha.xml"]
+
+RUN rm keycloak/standalone/configuration/standalone.xml
