Example logout solution when the entire vhost is auth protected

--- a/build-contracts/openidc/000-default.conf
+++ b/build-contracts/openidc/000-default.conf
@@ -20,9 +20,17 @@
 
 	Header setifempty Cache-Control "max-age=0, must-revalidate"
 
-	RedirectTemp /logout http://openidc/protected/redirect_uri?logout=http%3A%2F%2Fopenidc%2F%3Fwe-have-no-loggedout-page-yet
+	RedirectTemp /logout/do http://openidc/protected/redirect_uri?logout=http%3A%2F%2Fopenidc%2Flogout%2Fok
+	<Location /logout/ok>
+		OIDCUnAuthAction 410
+		ErrorDocument 410 "You have been successfully logged out. You may close this tab."
+	</Location>
 
-	<Location /protected>
+	<Location /apa>
+		OIDCUnAuthAction 410
+	</Location>
+
+	<Location />
 		AuthType openid-connect
 		Require valid-user
 	</Location>
