--- a/build-contracts/openidc/000-default.conf
+++ b/build-contracts/openidc/000-default.conf
@@ -23,7 +23,7 @@
 	RedirectTemp /logout/do http://openidc/protected/redirect_uri?logout=http%3A%2F%2Fopenidc%2Flogout%2Fok
 	<Location /logout/ok>
 		OIDCUnAuthAction 410
-		ErrorDocument 410 "You have been successfully logged out. You may close this tab."
+		ErrorDocument 410 "<html><head><title>Logged out</title></head><body><p>You have been logged out. You can close this tab.</p><p><a href=/>Log in again</a>.</p></body></html>"
 	</Location>
 
 	<Location /apa>
