Uses a protected url after login from an url we don't remember

--- a/build-contracts/openidc/000-default.conf
+++ b/build-contracts/openidc/000-default.conf
@@ -8,7 +8,7 @@
 	OIDCProviderMetadataURL http://keycloak:8080/auth/realms/Testrealm/.well-known/openid-configuration
 	#OIDCRedirectURI http://openidc/oauth2callback
 	OIDCRedirectURI http://openidc/protected/redirect_uri
-	OIDCDefaultURL http://openidc/
+	OIDCDefaultURL http://openidc/protected/
 	OIDCCryptoPassphrase 0123456789
 	OIDCClientID testclient
 	OIDCClientSecret 12816dc7-cf40-4abc-8df7-581e56930cf5
