--- a/build-contracts/openidc/000-default.conf
+++ b/build-contracts/openidc/000-default.conf
@@ -5,19 +5,11 @@
 	ErrorLog /proc/self/fd/1
 	CustomLog /proc/self/fd/2 combined
 
-	OIDCProviderMetadataURL http://keycloak:8080/auth/realms/Testrealm/.well-known/openid-configuration
-	#OIDCRedirectURI http://openidc/oauth2callback
+	OIDCProviderMetadataURL http://keycloak:8080/auth/realms/Testrealm2/.well-known/openid-configuration
 	OIDCRedirectURI http://openidc/protected/redirect_uri
 	OIDCDefaultURL http://openidc/protected/
-	OIDCCryptoPassphrase 0123456789
-	OIDCClientID testclient
-	OIDCClientSecret 12816dc7-cf40-4abc-8df7-581e56930cf5
-
-	OIDCSessionType server-cache:persistent
-
-	OIDCRemoteUserClaim email
-	OIDCScope "openid email"
-	OIDCPassClaimsAs environment
+	OIDCCryptoPassphrase in-production-this-is-something-random
+	OIDCClientID testrealm2-openid
 
 	Header setifempty Cache-Control "max-age=0, must-revalidate"
 
