conf for the new realm

--- a/build-contracts/openidc/000-default.conf
+++ b/build-contracts/openidc/000-default.conf
@@ -5,11 +5,11 @@
 	ErrorLog /proc/self/fd/1
 	CustomLog /proc/self/fd/2 combined
 
-	OIDCProviderMetadataURL http://keycloak:8080/auth/realms/Testrealm2/.well-known/openid-configuration
+	OIDCProviderMetadataURL http://keycloak:8080/auth/realms/Testrealm/.well-known/openid-configuration
 	OIDCRedirectURI http://openidc/protected/redirect_uri
 	OIDCDefaultURL http://openidc/protected/
 	OIDCCryptoPassphrase in-production-this-is-something-random
-	OIDCClientID testrealm2-openid
+	OIDCClientID openid1
 
 	Header setifempty Cache-Control "max-age=0, must-revalidate"
 
