SSO Session Idle 1 min, SSO Session Max 2 min, to test ajax revalidate

--- a/build-contracts/openidc/000-default.conf
+++ b/build-contracts/openidc/000-default.conf
@@ -11,6 +11,9 @@
 	OIDCCryptoPassphrase in-production-this-is-something-random
 	OIDCClientID openid1
 
+	# See fast if we accumulate state cookies
+	LimitRequestFieldSize 4096
+
 	Header setifempty Cache-Control "max-age=0, must-revalidate"
 
 	RedirectTemp /logout http://openidc/protected/redirect_uri?logout=http%3A%2F%2Fopenidc%2F%3Fwe-have-no-loggedout-page-yet
