--- a/build-contracts/openidc/000-default.conf
+++ b/build-contracts/openidc/000-default.conf
@@ -5,7 +5,14 @@
 	ErrorLog /proc/self/fd/1
 	CustomLog /proc/self/fd/2 combined
 
-	OIDCProviderMetadataURL http://keycloak:8080/auth/realms/Testrealm/.well-known/openid-configuration
+	RequestHeader set X-Forwarded-For openidc
+	RequestHeader set X-Forwarded-Proto http
+	ProxyPass "/auth/realms/Testrealm/"  "http://keycloak:8080/auth/realms/Testrealm/"
+	<Location "/auth/realms/Testrealm/">
+		OIDCUnAuthAction pass
+	</Location>
+
+	OIDCProviderMetadataURL http://openidc/auth/realms/Testrealm/.well-known/openid-configuration
 	OIDCRedirectURI http://openidc/protected/redirect_uri
 	OIDCDefaultURL http://openidc/protected/
 	OIDCCryptoPassphrase in-production-this-is-something-random
