--- a/build-contracts/openidc/000-default.conf
+++ b/build-contracts/openidc/000-default.conf
@@ -5,8 +5,8 @@
 	ErrorLog /proc/self/fd/1
 	CustomLog /proc/self/fd/2 combined
 
-	RequestHeader set X-Forwarded-For openidc
 	RequestHeader set X-Forwarded-Proto http
+	ProxyPreserveHost On
 	ProxyPass "/auth/realms/Testrealm/"  "http://keycloak:8080/auth/realms/Testrealm/"
 	<Location "/auth/realms/Testrealm/">
 		OIDCUnAuthAction pass
