Fixes login page styling, from /auth/resources/

--- a/build-contracts/openidc/000-default.conf
+++ b/build-contracts/openidc/000-default.conf
@@ -7,8 +7,8 @@
 
 	RequestHeader set X-Forwarded-Proto http
 	ProxyPreserveHost On
-	ProxyPass "/auth/realms/Testrealm/"  "http://keycloak:8080/auth/realms/Testrealm/"
-	<Location "/auth/realms/Testrealm/">
+	ProxyPass "/auth/"  "http://keycloak:8080/auth/"
+	<Location "/auth/">
 		OIDCUnAuthAction pass
 	</Location>
 
