RedirectURI can be relative but the others can't

--- a/build-contracts/openidc/000-default.conf
+++ b/build-contracts/openidc/000-default.conf
@@ -13,7 +13,7 @@
 	</Location>
 
 	OIDCProviderMetadataURL http://openidc/auth/realms/Testrealm/.well-known/openid-configuration
-	OIDCRedirectURI http://openidc/protected/redirect_uri
+	OIDCRedirectURI /protected/redirect_uri
 	OIDCDefaultURL http://openidc/protected/
 	OIDCCryptoPassphrase in-production-this-is-something-random
 	OIDCClientID openid1
