Sets REMOTE_USER to the uuid for the Keycloak account

--- a/build-contracts/openidc/000-default.conf
+++ b/build-contracts/openidc/000-default.conf
@@ -18,6 +18,8 @@
 	OIDCCryptoPassphrase in-production-this-is-something-random
 	OIDCClientID openid1
 
+	OIDCRemoteUserClaim sub
+
 	# See fast if we accumulate state cookies
 	LimitRequestFieldSize 4096
 
