Instead if needed use: RequestHeader set My-Header %{OIDC_CLAIM_nnn}e

--- a/build-contracts/openidc/000-default.conf
+++ b/build-contracts/openidc/000-default.conf
@@ -19,6 +19,7 @@
 	OIDCClientID openid1
 
 	OIDCRemoteUserClaim sub
+	OIDCPassClaimsAs environment
 
 	# See fast if we accumulate state cookies
 	LimitRequestFieldSize 4096
