Exemplifies https://github.com/pingidentity/mod_auth_openidc/wiki/Single-Page-Applications

--- a/build-contracts/openidc/000-default.conf
+++ b/build-contracts/openidc/000-default.conf
@@ -21,6 +21,8 @@
 	OIDCRemoteUserClaim sub
 	OIDCPassClaimsAs environment
 
+	OIDCInfoHook userinfo
+
 	# See fast if we accumulate state cookies
 	LimitRequestFieldSize 4096
 
