Gets rid of some very odd caching issues

--- a/build-contracts/keycloak-setup/package.json
+++ b/build-contracts/keycloak-setup/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "chai": "4.0.0",
-    "keycloak-auth-utils": "3.1.0",
+    "keycloak-auth-utils": "git+https://github.com/keycloak/keycloak-nodejs-auth-utils#af667875a4ce4942a89b13c471ef3da627ab7cfb",
     "mocha": "3.4.2"
   }
 }
