Revert to Postgres because it starts fast enough for keycloak start
This reverts commit f5c4de06303f19df36c4e7a91aba2990ea171a52, reversing
changes made to 4fe72e08c10560e33d2bd468d8f6d508590a48e7.

--- a/build-contracts/docker-compose.yml
+++ b/build-contracts/docker-compose.yml
@@ -1,32 +1,25 @@
 version: '2'
 services:
-  mysql:
-    image: mariadb:10.1.23
+  postgres:
+    image: postgres:9.6
     expose:
-      - "3306"
+      - "5432"
     environment:
-      MYSQL_ROOT_PASSWORD: openidctest
-      MYSQL_DATABASE: keycloak
-      MYSQL_USER: keycloak
-      MYSQL_PASSWORD: keycloak
-    command:
-      # https://issues.jboss.org/browse/KEYCLOAK-3873
-      - --character-set-server=utf8
-      - --collation-server=utf8_unicode_ci
+      POSTGRES_USER: keycloak
+      POSTGRES_PASSWORD: keycloak
   keycloak:
-    image: jboss/keycloak-mysql:3.1.0.Final
+    image: jboss/keycloak-postgres:3.1.0.Final
     links:
-      - mysql
+      - postgres
     environment:
+      PROXY_ADDRESS_FORWARDING: "true"
       KEYCLOAK_USER: admin
       KEYCLOAK_PASSWORD: openidctest
-      MYSQL_USERNAME: keycloak
-      MYSQL_PASSWORD: keycloak
+      POSTGRES_USER: keycloak
+      POSTGRES_PASSWORD: keycloak
       # Workaround for container using legacy Docker links, resulting in
-      # "WFLYCTL0211: Cannot resolve expression 'jdbc:mysql://${env.MYSQL_PORT_3306_TCP_ADDR}:${env.MYSQL_PORT_3306_TCP_PORT}
-      MYSQL_PORT_3306_TCP_ADDR: mysql
-      MYSQL_PORT_3306_TCP_PORT: "3306"
-      PROXY_ADDRESS_FORWARDING: "true"
+      # "WFLYCTL0211: Cannot resolve expression 'jdbc:postgresql://${env.POSTGRES_PORT_5432_TCP_ADDR}...")n
+      POSTGRES_PORT_5432_TCP_ADDR: postgres
     expose:
       - "8080"
       - "9090"
