--- a/httpd-openidc/Dockerfile
+++ b/httpd-openidc/Dockerfile
@@ -2,9 +2,9 @@
 # https://github.com/docker-library/repo-info/blob/master/repos/httpd/tag-details.md
 FROM httpd:2.4.25@sha256:72b55a7c15a4ee3d56ff19f83b57b82287714f91070b1f556a54e90da5eee3fa
 
-ENV OPENIDC_VERSION v2.3.0
-ENV OPENIDC_VERSION_TGZ_URL https://github.com/pingidentity/mod_auth_openidc/archive/$OPENIDC_VERSION.tar.gz
-ENV OPENIDC_VERSION_TGZ_SHA1 a958d14d38a9800cf131cbd030dadb0bfbd6e778
+ENV OPENIDC_VERSION 2.3.0
+ENV OPENIDC_VERSION_DEB_URL https://github.com/pingidentity/mod_auth_openidc/releases/download/v$OPENIDC_VERSION/libapache2-mod-auth-openidc_$OPENIDC_VERSION-1.jessie.1_amd64.deb
+ENV OPENIDC_VERSION_DEB_SHA1 1e8c094134f0f777a0540d53fcda5030c77a57cb
 
 ENV CJOSE_VERSION 0.5.1
 ENV CJOSE_DEB_URL https://github.com/pingidentity/mod_auth_openidc/releases/download/v2.3.0/libcjose0_$CJOSE_VERSION-1.jessie.1_amd64.deb
@@ -17,18 +17,10 @@ RUN depsRuntime=" \
 		libpcre3 \
 		libjansson4 \
 		libhiredis0.10 \
+		apache2-api-20120211 \
 	" \
   && depsBuild=" \
 		curl \
-		gcc \
-		make \
-		libpcre3-dev \
-		libssl-dev=$OPENSSL_VERSION \
-		libcurl4-openssl-dev \
-		libjansson-dev \
-		pkg-config \
-		dh-autoreconf \
-		libhiredis-dev \
 	" \
 	set -x \
 	&& apt-get update \
@@ -39,19 +31,11 @@ RUN depsRuntime=" \
 	&& echo "$CJOSE_DEB_SHA1 libcjose.deb" | sha1sum -c - \
 	&& dpkg -i libcjose.deb \
 	&& rm libcjose.deb \
-	&& curl -SL "$OPENIDC_VERSION_TGZ_URL" -o mod_auth_openidc-$OPENIDC_VERSION.tar.gz \
-	&& echo "$OPENIDC_VERSION_TGZ_SHA1 mod_auth_openidc-$OPENIDC_VERSION.tar.gz" | sha1sum -c - \
-	&& mkdir -p src/mod_auth_openidc \
-	&& tar -xvf mod_auth_openidc-$OPENIDC_VERSION.tar.gz -C src/mod_auth_openidc --strip-components=1 \
-	&& rm mod_auth_openidc-$OPENIDC_VERSION.tar.gz* \
-	&& cd src/mod_auth_openidc \
-	&& ./autogen.sh \
-	&& ./configure --with-apxs2=/usr/local/apache2/bin/apxs \
-	&& make -j"$(nproc)" \
-	&& make install \
-	&& /sbin/ldconfig \
-	&& cd ../../ \
-	&& rm -r src/mod_auth_openidc \
+	&& curl -SL "$OPENIDC_VERSION_DEB_URL" -o mod_auth_openidc-$OPENIDC_VERSION.deb \
+	&& echo "$OPENIDC_VERSION_DEB_SHA1 mod_auth_openidc-$OPENIDC_VERSION.deb" | sha1sum -c - \
+	&& dpkg -i mod_auth_openidc-$OPENIDC_VERSION.deb \
+	&& rm mod_auth_openidc-$OPENIDC_VERSION.deb \
+	&& ln -s /usr/lib/apache2/modules/mod_auth_openidc.so /usr/local/apache2/modules/mod_auth_openidc.so \
 	&& apt-get purge -y --auto-remove $depsBuild
 
 RUN sed -i 's|LoadModule rewrite_module modules/mod_rewrite.so|LoadModule rewrite_module modules/mod_rewrite.so\nLoadModule auth_openidc_module modules/mod_auth_openidc.so|' conf/httpd.conf
