--- a/httpd-openidc/Dockerfile
+++ b/httpd-openidc/Dockerfile
@@ -9,6 +9,7 @@ ENV OPENIDC_VERSION_TGZ_SHA1 a958d14d38a9800cf131cbd030dadb0bfbd6e778
 ENV CJOSE_VERSION 0.5.1
 ENV CJOSE_DEB_URL https://github.com/pingidentity/mod_auth_openidc/releases/download/v2.3.0/libcjose0_$CJOSE_VERSION-1.jessie.1_amd64.deb
 ENV CJOSE_DEB_SHA1 cad77328cf33319e85267a1e9f804912aed3bb5d
+ENV CJOSE_DEV_DEB_URL https://mod-auth-openidc.org/download/libcjose-dev_$CJOSE_VERSION-1~jessie+1_amd64.deb
 
 ENV DEBIAN_FRONTEND noninteractive
 
@@ -39,6 +40,9 @@ RUN depsRuntime=" \
 	&& echo "$CJOSE_DEB_SHA1 libcjose.deb" | sha1sum -c - \
 	&& dpkg -i libcjose.deb \
 	&& rm libcjose.deb \
+	&& curl -SL "$CJOSE_DEV_DEB_URL" -o libcjose-dev.deb \
+	&& dpkg -i libcjose-dev.deb \
+	&& rm libcjose-dev.deb \
 	&& curl -SL "$OPENIDC_VERSION_TGZ_URL" -o mod_auth_openidc-$OPENIDC_VERSION.tar.gz \
 	&& echo "$OPENIDC_VERSION_TGZ_SHA1 mod_auth_openidc-$OPENIDC_VERSION.tar.gz" | sha1sum -c - \
 	&& mkdir -p src/mod_auth_openidc \
