--- a/build-contracts/export.docker-compose.yml
+++ b/build-contracts/export.docker-compose.yml
@@ -9,3 +9,5 @@ services:
       - -Dkeycloak.migration.action=export
       - -Dkeycloak.migration.provider=dir
       - -Dkeycloak.migration.dir=/export
+      #- -Dkeycloak.migration.realmName=Testrealm
+      #- -Dkeycloak.migration.usersExportStrategy=SAME_FILE
