--- a/build-contracts/openidc/200-default.conf
+++ b/build-contracts/openidc/200-default.conf
@@ -5,15 +5,9 @@
 	ErrorLog /proc/self/fd/1
 	CustomLog /proc/self/fd/2 combined
 
-	RequestHeader set X-Forwarded-Proto http
-	ProxyPreserveHost On
-	ProxyPass "/auth/"  "http://keycloak:8080/auth/"
-	<Location "/auth/">
-		OIDCUnAuthAction pass
-	</Location>
-
-	OIDCProviderMetadataURL http://openidc/auth/realms/Testrealm/.well-known/openid-configuration
-	OIDCRedirectURI /protected/redirect_uri
+	OIDCProviderMetadataURL http://keycloak:8080/auth/realms/Testrealm/.well-known/openid-configuration
+	#OIDCRedirectURI http://openidc/oauth2callback
+	OIDCRedirectURI http://openidc/protected/redirect_uri
 	OIDCDefaultURL http://openidc/protected/
 	OIDCCryptoPassphrase 0123456789
 	OIDCClientID testclient
@@ -21,13 +15,9 @@
 
 	OIDCSessionType server-cache:persistent
 
-	OIDCRemoteUserClaim sub
+	OIDCRemoteUserClaim email
+	OIDCScope "openid email"
 	OIDCPassClaimsAs environment
-
-	OIDCInfoHook userinfo
-
-	# See fast if we accumulate state cookies
-	LimitRequestFieldSize 4096
 
 	Header setifempty Cache-Control "max-age=0, must-revalidate"
 
