--- a/build-contracts/export.docker-compose.yml
+++ b/build-contracts/export.docker-compose.yml
@@ -5,9 +5,13 @@ services:
     volumes:
       - ./keycloak-setup/export:/export
     entrypoint:
-      - /opt/jboss/keycloak/bin/standalone.sh
-      - -Dkeycloak.migration.action=export
-      - -Dkeycloak.migration.provider=dir
-      - -Dkeycloak.migration.dir=/export
-      #- -Dkeycloak.migration.realmName=Testrealm
-      #- -Dkeycloak.migration.usersExportStrategy=SAME_FILE
+      - /bin/bash
+      - -ce
+      - >
+        /bin/sh /opt/jboss/keycloak/bin/change-database.sh postgres;
+        /opt/jboss/keycloak/bin/standalone.sh
+        -Dkeycloak.migration.action=export
+        -Dkeycloak.migration.provider=dir
+        -Dkeycloak.migration.dir=/export
+      # -Dkeycloak.migration.realmName=Testrealm
+      # -Dkeycloak.migration.usersExportStrategy=SAME_FILE
