Re-exported from Keycloak 3.4.0

--- a/build-contracts/export.docker-compose.yml
+++ b/build-contracts/export.docker-compose.yml
@@ -13,5 +13,5 @@ services:
         -Dkeycloak.migration.action=export
         -Dkeycloak.migration.provider=dir
         -Dkeycloak.migration.dir=/export
-      # -Dkeycloak.migration.realmName=Testrealm
-      # -Dkeycloak.migration.usersExportStrategy=SAME_FILE
+        -Dkeycloak.migration.realmName=Testrealm
+        -Dkeycloak.migration.usersExportStrategy=SAME_FILE
