Supports loglevel by command (entrypoint arg) instead of env
so we don't need to introduce an entrypoint script.

--- a/build-contracts/docker-compose.yml
+++ b/build-contracts/docker-compose.yml
@@ -44,6 +44,8 @@ services:
     # For local browser; you also need "openidc" in your hosts file
     ports:
       - "80:80"
+    command:
+      - -DLOGLEVEL=info
     volumes:
       - ./html-ajax:/var/www/html
   keycloak-setup:
