No one reads the docs, not even the author :)

--- a/build-contracts/openidc/000-default.conf
+++ b/build-contracts/openidc/000-default.conf
@@ -1,4 +1,10 @@
 <VirtualHost *:80>
+	ErrorDocument 404 'Due to the nature of OIDCProviderMetadataURL this setup must sit at <a href="http://openidc">http://openidc</a>, presumably an /etc/hosts entry'
+	DocumentRoot htdocs/nonexistent/
+</VirtualHost>
+
+<VirtualHost *:80>
+	ServerName openidc
 	ServerAdmin webmaster@localhost
 	DocumentRoot htdocs/
 
