Makes it quite simple to change log level

--- a/httpd-openidc/Dockerfile
+++ b/httpd-openidc/Dockerfile
@@ -37,3 +37,9 @@ RUN depsRuntime=" \
   && rm -rf /var/log/dpkg.log /var/log/alternatives.log /var/log/apt
 
 RUN sed -i 's|LoadModule rewrite_module modules/mod_rewrite.so|LoadModule rewrite_module modules/mod_rewrite.so\nLoadModule auth_openidc_module modules/mod_auth_openidc.so|' conf/httpd.conf
+
+RUN set -e; \
+  set -x; \
+  sed -i 's|^LogLevel warn|Include conf/loglevels.conf|' conf/httpd.conf; \
+       for L in warn info debug; do echo "<IfDefine LOGLEVEL=$L>\n  LogLevel $L\n</IfDefine>" >> conf/loglevels.conf; done
+CMD ["-DLOGLEVEL=info"]
