Adds trailing = to the logout url, so it works with OIDCDefaultLoggedOutURL

--- a/build-contracts/openidc/000-default.conf
+++ b/build-contracts/openidc/000-default.conf
@@ -39,7 +39,7 @@
 	Header setifempty Cache-Control "max-age=0, must-revalidate"
 
 	OIDCDefaultLoggedOutURL http://openidc/we-have-no-loggedout-page-yet
-	RedirectTemp /logout http://openidc/protected/redirect_uri?logout
+	RedirectTemp /logout http://openidc/protected/redirect_uri?logout=
 
 	<Location /protected>
 		AuthType openid-connect
